fix web app horizontal overflow

--- a/WebApp/static/main_style.css
+++ b/WebApp/static/main_style.css
@@ -308,6 +308,7 @@ input,
 select,
 textarea {
   color: #222;
+  overflow-x: scroll;
 }
 
 ::-moz-selection {
